disabling call to dead or unreachable pools sonce 15 days. fix pool update tick menubar collapse on mobile when click redondant clear timeout when changing page

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,9 +100,10 @@ footer {
 }
 
 #pools_updated{
-    opacity: 0;
+    /*opacity: 0;*/
     float: right;
     font-size: 0.9em;
+    margin-top: -18px;
 }
 
 /*forms*/
